_generated-doc/2.2/config/quarkus-core.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-core_configuration]]link:#quarkus-core_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.config.locations]]`link:#quarkus-core_quarkus.config.locations[quarkus.config.locations]`

[.description]
--
Additional config locations to be loaded with the Config. The configuration support multiple locations separated by a comma and each must represent a valid `java.net.URI`.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.config.profile.parent]]`link:#quarkus-core_quarkus.config.profile.parent[quarkus.config.profile.parent]`

[.description]
--
Accepts a single configuration profile name. If a configuration property cannot be found in the current active profile, the config performs the same lookup in the profile set by this configuration.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.uuid]]`link:#quarkus-core_quarkus.uuid[quarkus.uuid]`

[.description]
--
A property that allows accessing a generated UUID. It generates that UUID at startup time. So it changes between two starts including in dev mode. Access this generated UUID using expressions: `$++{++quarkus.uuid++}++`.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.locales]]`link:#quarkus-core_quarkus.locales[quarkus.locales]`

[.description]
--
The set of supported locales that can be consumed by the extensions. 
 The locales must be specified in the IETF BCP 47 format e.g. en-US or fr-FR. 
 For instance, the Hibernate Validator extension makes use of it.
--|list of link:https://docs.oracle.com/javase/8/docs/api/java/util/Locale.html[Locale]
 
|`${user.language:en}-${user.country:}`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.default-locale]]`link:#quarkus-core_quarkus.default-locale[quarkus.default-locale]`

[.description]
--
Default locale that can be consumed by the extensions. 
 The locales must be specified in the IETF BCP 47 format e.g. en-US or fr-FR. 
 For instance, the Hibernate Validator extension makes use of it.
--|link:https://docs.oracle.com/javase/8/docs/api/java/util/Locale.html[Locale]
 
|`${user.language:en}-${user.country:}`


a| [[quarkus-core_quarkus.profile]]`link:#quarkus-core_quarkus.profile[quarkus.profile]`

[.description]
--
Profile that will be active when Quarkus launches Default value is 'prod'
--|string 
|


a| [[quarkus-core_quarkus.args]]`link:#quarkus-core_quarkus.args[quarkus.args]`

[.description]
--
The arguments passed to the command line. 
 We don't make it a list as the args are separated by a space, not a comma.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.application.name]]`link:#quarkus-core_quarkus.application.name[quarkus.application.name]`

[.description]
--
The name of the application. If not set, defaults to the name of the project (except for tests where it is not set at all).
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.application.version]]`link:#quarkus-core_quarkus.application.version[quarkus.application.version]`

[.description]
--
The version of the application. If not set, defaults to the version of the project (except for tests where it is not set at all).
--|string 
|


a| [[quarkus-core_quarkus.banner.enabled]]`link:#quarkus-core_quarkus.banner.enabled[quarkus.banner.enabled]`

[.description]
--
Whether or not the banner will be displayed
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.bootstrap.effective-model-builder]]`link:#quarkus-core_quarkus.bootstrap.effective-model-builder[quarkus.bootstrap.effective-model-builder]`

[.description]
--
If set to true, the workspace initialization will be based on the effective POMs (i.e. properly interpolated, including support for profiles, etc) instead of the raw ones.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.bootstrap.misaligned-platform-imports]]`link:#quarkus-core_quarkus.bootstrap.misaligned-platform-imports[quarkus.bootstrap.misaligned-platform-imports]`

[.description]
--
Whether to throw an error, warn or silently ignore misaligned platform BOM imports
--|`error`, `warn`, `ignore` 
|`error`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.class-loading.parent-first-artifacts]]`link:#quarkus-core_quarkus.class-loading.parent-first-artifacts[quarkus.class-loading.parent-first-artifacts]`

[.description]
--
Artifacts that are loaded in a parent first manner. This can be used to work around issues where a given class needs to be loaded by the system ClassLoader. Note that if you make a library parent first all its dependencies should generally also be parent first. 
 Artifacts should be configured as a comma separated list of artifact ids, with the group, artifact-id and optional classifier separated by a colon. 
 WARNING: This config property can only be set in application.properties
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.class-loading.reloadable-artifacts]]`link:#quarkus-core_quarkus.class-loading.reloadable-artifacts[quarkus.class-loading.reloadable-artifacts]`

[.description]
--
Artifacts that are loaded in the runtime ClassLoader in dev mode, so they will be dropped and recreated on change. 
 This is an advanced option, it should only be used if you have a problem with libraries holding stale state between reloads. Note that if you use this any library that depends on the listed libraries will also need to be reloadable. 
 This setting has no impact on production builds. 
 Artifacts should be configured as a comma separated list of artifact ids, with the group, artifact-id and optional classifier separated by a colon. 
 WARNING: This config property can only be set in application.properties
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.class-loading.removed-artifacts]]`link:#quarkus-core_quarkus.class-loading.removed-artifacts[quarkus.class-loading.removed-artifacts]`

[.description]
--
Artifacts that will never be loaded by the class loader, and will not be packed into the final application. This allows you to explicitly remove artifacts from your application even though they may be present on the class path.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.class-loading.removed-resources-removed-resources]]`link:#quarkus-core_quarkus.class-loading.removed-resources-removed-resources[quarkus.class-loading.removed-resources]`

[.description]
--
Resources that should be removed/hidden from dependencies. 
 This allows for classes and other resources to be removed from dependencies, so they are not accessible to the application. This is a map of artifact id (in the form group:artifact) to a list of resources to be removed. 
 When running in dev and test mode these resources are hidden from the ClassLoader, when running in production mode these files are removed from the jars that contain them. 
 Note that if you want to remove a class you need to specify the class file name. e.g. to remove `com.acme.Foo` you would specify `com/acme/Foo.class`. 
 Note that for technical reasons this is not supported when running with JBang.
--|`Map<String,Set<String>>` 
|


a| [[quarkus-core_quarkus.configuration.build-time-mismatch-at-runtime]]`link:#quarkus-core_quarkus.configuration.build-time-mismatch-at-runtime[quarkus.configuration.build-time-mismatch-at-runtime]`

[.description]
--
What should happen if the application is started with a different build time configuration than it was compiled against. This may be useful to prevent misconfiguration. 
 If this is set to `warn` the application will warn at start up. 
 If this is set to `fail` the application will fail at start up. 
 Native tests leveraging`@io.quarkus.test.junit.TestProfile` are always run with `quarkus.configuration.build-time-mismatch-at-runtime = fail`.
--|`warn`, `fail` 
|`warn`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.console.enabled]]`link:#quarkus-core_quarkus.console.enabled[quarkus.console.enabled]`

[.description]
--
If test results and status should be displayed in the console. 
 If this is false results can still be viewed in the dev console.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.console.disable-input]]`link:#quarkus-core_quarkus.console.disable-input[quarkus.console.disable-input]`

[.description]
--
Disables the ability to enter input on the console.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.console.basic]]`link:#quarkus-core_quarkus.console.basic[quarkus.console.basic]`

[.description]
--
Disable the testing status/prompt message at the bottom of the console and log these messages to STDOUT instead. 
 Use this option if your terminal does not support ANSI escape sequences.
--|boolean 
|`false`


a| [[quarkus-core_quarkus.console.color]]`link:#quarkus-core_quarkus.console.color[quarkus.console.color]`

[.description]
--
If color should be enabled or disabled. If this is not present then an attempt will be made to guess if the terminal supports color
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.debug.reflection]]`link:#quarkus-core_quarkus.debug.reflection[quarkus.debug.reflection]`

[.description]
--
If set to true, writes a list of all reflective classes to META-INF
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.debug.generated-classes-dir]]`link:#quarkus-core_quarkus.debug.generated-classes-dir[quarkus.debug.generated-classes-dir]`

[.description]
--
If set to a directory, all generated classes will be written into that directory
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.devservices.enabled]]`link:#quarkus-core_quarkus.devservices.enabled[quarkus.devservices.enabled]`

[.description]
--
Global flag that can be used to disable all Dev Services. If this is set to false then Dev Services will not be used.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.ide.target]]`link:#quarkus-core_quarkus.ide.target[quarkus.ide.target]`

[.description]
--
The Ide to use to open files from the DevUI. `auto` means that Quarkus will attempt to determine the Ide being used.
--|`auto`, `idea`, `vscode`, `eclipse`, `netbeans` 
|`auto`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.jni.library-paths]]`link:#quarkus-core_quarkus.jni.library-paths[quarkus.jni.library-paths]`

[.description]
--
Paths of library to load.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.live-reload.instrumentation]]`link:#quarkus-core_quarkus.live-reload.instrumentation[quarkus.live-reload.instrumentation]`

[.description]
--
Whether or not Quarkus should enable its ability to not do a full restart when changes to classes are compatible with JVM instrumentation. If this is set to true, Quarkus will perform class redefinition when possible.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.live-reload.watched-resources]]`link:#quarkus-core_quarkus.live-reload.watched-resources[quarkus.live-reload.watched-resources]`

[.description]
--
The names of additional resource files to watch for changes, triggering a reload on change. Directories are *not* supported.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.live-reload.password]]`link:#quarkus-core_quarkus.live-reload.password[quarkus.live-reload.password]`

[.description]
--
Password used to use to connect to the remote dev-mode application
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.live-reload.url]]`link:#quarkus-core_quarkus.live-reload.url[quarkus.live-reload.url]`

[.description]
--
URL used to use to connect to the remote dev-mode application
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.live-reload.connect-timeout]]`link:#quarkus-core_quarkus.live-reload.connect-timeout[quarkus.live-reload.connect-timeout]`

[.description]
--
The amount of time to wait for a remote dev connect or reconnect
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`30S`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.live-reload.retry-interval]]`link:#quarkus-core_quarkus.live-reload.retry-interval[quarkus.live-reload.retry-interval]`

[.description]
--
The amount of time to wait between attempts when connecting to the server side of remote dev
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`2S`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.live-reload.retry-max-attempts]]`link:#quarkus-core_quarkus.live-reload.retry-max-attempts[quarkus.live-reload.retry-max-attempts]`

[.description]
--
The maximum number of attempts when connecting to the server side of remote dev
--|int 
|`10`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.log.metrics.enabled]]`link:#quarkus-core_quarkus.log.metrics.enabled[quarkus.log.metrics.enabled]`

[.description]
--
Whether or not logging metrics are published in case a metrics extension is present.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.log.min-level]]`link:#quarkus-core_quarkus.log.min-level[quarkus.log.min-level]`

[.description]
--
The default minimum log level.
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`DEBUG`


a| [[quarkus-core_quarkus.log.level]]`link:#quarkus-core_quarkus.log.level[quarkus.log.level]`

[.description]
--
The log level of the root category, which is used as the default log level for all categories.

JBoss Logging supports Apache style log levels:

* {@link org.jboss.logmanager.Level#FATAL}
* {@link org.jboss.logmanager.Level#ERROR}
* {@link org.jboss.logmanager.Level#WARN}
* {@link org.jboss.logmanager.Level#INFO}
* {@link org.jboss.logmanager.Level#DEBUG}
* {@link org.jboss.logmanager.Level#TRACE}

In addition, it also supports the standard JDK log levels.
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`INFO`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.additional-build-args]]`link:#quarkus-core_quarkus.native.additional-build-args[quarkus.native.additional-build-args]`

[.description]
--
Comma-separated, additional arguments to pass to the build process. If an argument includes the `,` symbol, it needs to be escaped, e.g. `++\\++,`
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.enable-http-url-handler]]`link:#quarkus-core_quarkus.native.enable-http-url-handler[quarkus.native.enable-http-url-handler]`

[.description]
--
If the HTTP url handler should be enabled, allowing you to do URL.openConnection() for HTTP URLs
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.enable-https-url-handler]]`link:#quarkus-core_quarkus.native.enable-https-url-handler[quarkus.native.enable-https-url-handler]`

[.description]
--
If the HTTPS url handler should be enabled, allowing you to do URL.openConnection() for HTTPS URLs
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.enable-all-security-services]]`link:#quarkus-core_quarkus.native.enable-all-security-services[quarkus.native.enable-all-security-services]`

[.description]
--
If all security services should be added to the native image
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.inline-before-analysis]]`link:#quarkus-core_quarkus.native.inline-before-analysis[quarkus.native.inline-before-analysis]`

[.description]
--
If `-H:{plus}InlineBeforeAnalysis` flag will be added to the native-image run
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.user-language]]`link:#quarkus-core_quarkus.native.user-language[quarkus.native.user-language]`

[.description]
--
Defines the user language used for building the native executable. 
 Defaults to the system one.
--|string 
|`${user.language:}`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.user-country]]`link:#quarkus-core_quarkus.native.user-country[quarkus.native.user-country]`

[.description]
--
Defines the user country used for building the native executable. 
 Defaults to the system one.
--|string 
|`${user.country:}`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.file-encoding]]`link:#quarkus-core_quarkus.native.file-encoding[quarkus.native.file-encoding]`

[.description]
--
Defines the file encoding as in -Dfile.encoding=... Native image runtime uses the host's (i.e. build time) value of file.encoding system property. We intentionally default this to UTF-8 to avoid platform specific defaults to be picked up which can then result in inconsistent behavior in the generated native executable.
--|string 
|`UTF-8`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.add-all-charsets]]`link:#quarkus-core_quarkus.native.add-all-charsets[quarkus.native.add-all-charsets]`

[.description]
--
If all character sets should be added to the native image. This increases image size
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.graalvm-home]]`link:#quarkus-core_quarkus.native.graalvm-home[quarkus.native.graalvm-home]`

[.description]
--
The location of the Graal distribution
--|string 
|`${GRAALVM_HOME:}`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.java-home]]`link:#quarkus-core_quarkus.native.java-home[quarkus.native.java-home]`

[.description]
--
The location of the JDK
--|link:https://docs.oracle.com/javase/8/docs/api/java/io/File.html[File]
 
|`${java.home}`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.native-image-xmx]]`link:#quarkus-core_quarkus.native.native-image-xmx[quarkus.native.native-image-xmx]`

[.description]
--
The maximum Java heap to be used during the native image generation
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.debug-build-process]]`link:#quarkus-core_quarkus.native.debug-build-process[quarkus.native.debug-build-process]`

[.description]
--
If the native image build should wait for a debugger to be attached before running. This is an advanced option and is generally only intended for those familiar with GraalVM internals
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.publish-debug-build-process-port]]`link:#quarkus-core_quarkus.native.publish-debug-build-process-port[quarkus.native.publish-debug-build-process-port]`

[.description]
--
If the debug port should be published when building with docker and debug-build-process is true
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.enable-isolates]]`link:#quarkus-core_quarkus.native.enable-isolates[quarkus.native.enable-isolates]`

[.description]
--
If isolates should be enabled
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.enable-fallback-images]]`link:#quarkus-core_quarkus.native.enable-fallback-images[quarkus.native.enable-fallback-images]`

[.description]
--
If a JVM based 'fallback image' should be created if native image fails. This is not recommended, as this is functionally the same as just running the application in a JVM
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.auto-service-loader-registration]]`link:#quarkus-core_quarkus.native.auto-service-loader-registration[quarkus.native.auto-service-loader-registration]`

[.description]
--
If all META-INF/services entries should be automatically registered
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.dump-proxies]]`link:#quarkus-core_quarkus.native.dump-proxies[quarkus.native.dump-proxies]`

[.description]
--
If the bytecode of all proxies should be dumped for inspection
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.container-build]]`link:#quarkus-core_quarkus.native.container-build[quarkus.native.container-build]`

[.description]
--
If this build should be done using a container runtime. Unless container-runtime is also set, docker will be used by default. If docker is not available or is an alias to podman, podman will be used instead as the default.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.remote-container-build]]`link:#quarkus-core_quarkus.native.remote-container-build[quarkus.native.remote-container-build]`

[.description]
--
If this build is done using a remote docker daemon.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.builder-image]]`link:#quarkus-core_quarkus.native.builder-image[quarkus.native.builder-image]`

[.description]
--
The docker image to use to do the image build
--|string 
|`${platform.quarkus.native.builder-image}`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.container-runtime]]`link:#quarkus-core_quarkus.native.container-runtime[quarkus.native.container-runtime]`

[.description]
--
The container runtime (e.g. docker) that is used to do an image based build. If this is set then a container build is always done.
--|`docker`, `podman` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.container-runtime-options]]`link:#quarkus-core_quarkus.native.container-runtime-options[quarkus.native.container-runtime-options]`

[.description]
--
Options to pass to the container runtime
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.enable-vm-inspection]]`link:#quarkus-core_quarkus.native.enable-vm-inspection[quarkus.native.enable-vm-inspection]`

[.description]
--
If the resulting image should allow VM introspection
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.full-stack-traces]]`link:#quarkus-core_quarkus.native.full-stack-traces[quarkus.native.full-stack-traces]`

[.description]
--
If full stack traces are enabled in the resulting image
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.enable-reports]]`link:#quarkus-core_quarkus.native.enable-reports[quarkus.native.enable-reports]`

[.description]
--
If the reports on call paths and included packages/classes/methods should be generated
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.report-exception-stack-traces]]`link:#quarkus-core_quarkus.native.report-exception-stack-traces[quarkus.native.report-exception-stack-traces]`

[.description]
--
If exceptions should be reported with a full stack trace
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.report-errors-at-runtime]]`link:#quarkus-core_quarkus.native.report-errors-at-runtime[quarkus.native.report-errors-at-runtime]`

[.description]
--
If errors should be reported at runtime. This is a more relaxed setting, however it is not recommended as it means your application may fail at runtime if an unsupported feature is used by accident.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.reuse-existing]]`link:#quarkus-core_quarkus.native.reuse-existing[quarkus.native.reuse-existing]`

[.description]
--
Don't build a native image if it already exists. This is useful if you have already built an image and you want to use Quarkus to deploy it somewhere. Note that this is not able to detect if the existing image is outdated, if you have modified source or config and want a new image you must not use this flag.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.resources.includes]]`link:#quarkus-core_quarkus.native.resources.includes[quarkus.native.resources.includes]`

[.description]
--
A comma separated list of globs to match resource paths that should be added to the native image. 
 Use slash (`/`) as a path separator on all platforms. Globs must not start with slash. 
 By default, no resources are included. 
 Example: Given that you have `src/main/resources/ignored.png` and `src/main/resources/foo/selected.png` in your source tree and one of your dependency JARs contains `bar/some.txt` file, with the following configuration quarkus.native.resources.includes = foo/++**++,bar/++**++/++*++.txt  the files `src/main/resources/foo/selected.png` and `bar/some.txt` will be included in the native image, while `src/main/resources/ignored.png` will not be included. 
 Supported glob features   Feature Description   `++*++` Matches a (possibly empty) sequence of characters that does not contain slash (`/`)   `++**++` Matches a (possibly empty) sequence of characters that may contain slash (`/`)   `?` Matches one character, but not slash   `++[++abc++]++` Matches one character given in the bracket, but not slash   `++[++a-z++]++` Matches one character from the range given in the bracket, but not slash   `++[++!abc++]++` Matches one character not named in the bracket; does not match slash   `++[++a-z++]++` Matches one character outside the range given in the bracket; does not match slash   `++{++one,two,three++}++` Matches any of the alternating tokens separated by comma; the tokens may contain wildcards, nested alternations and ranges   `++\++` The escape character   
 Note that there are three levels of escaping when passing this option via `application.properties`:  
 . `application.properties` parser 
 - MicroProfile Config list converter that splits the comma separated list 
 - Glob parser  All three levels use backslash (`++\++`) as the escaping character. So you need to use an appropriate number of backslashes depending on which level you want to escape. 
 Note that Quarkus extensions typically include the resources they require by themselves. This option is useful in situations when the built-in functionality is not sufficient.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.resources.excludes]]`link:#quarkus-core_quarkus.native.resources.excludes[quarkus.native.resources.excludes]`

[.description]
--
A comma separated list of globs to match resource paths that should *not* be added to the native image. 
 Use slash (`/`) as a path separator on all platforms. Globs must not start with slash. 
 Please refer to `includes` for details about the glob syntax. 
 By default, no resources are excluded. 
 Example: Given that you have `src/main/resources/red.png` and `src/main/resources/foo/green.png` in your source tree and one of your dependency JARs contains `bar/blue.png` file, with the following configuration quarkus.native.resources.includes = ++**++/++*++.png quarkus.native.resources.excludes = foo/++**++,++**++/green.png  the resource `red.png` will be available in the native image while the resources `foo/green.png` and `bar/blue.png` will not be available in the native image.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.debug.enabled]]`link:#quarkus-core_quarkus.native.debug.enabled[quarkus.native.debug.enabled]`

[.description]
--
If debug is enabled and debug symbols are generated. The symbols will be generated in a separate .debug file.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.native.enable-dashboard-dump]]`link:#quarkus-core_quarkus.native.enable-dashboard-dump[quarkus.native.enable-dashboard-dump]`

[.description]
--
Generate the report files for GraalVM Dashboard.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.type]]`link:#quarkus-core_quarkus.package.type[quarkus.package.type]`

[.description]
--
The requested output type. 
 The default built in types are 'jar' (which will use 'fast-jar'), 'legacy-jar' for the pre-1.12 default jar packaging, 'uber-jar', 'native' and 'native-sources'.
--|string 
|`jar`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.manifest.add-implementation-entries]]`link:#quarkus-core_quarkus.package.manifest.add-implementation-entries[quarkus.package.manifest.add-implementation-entries]`

[.description]
--
If the Implementation information should be included in the runner jar's MANIFEST.MF.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.main-class]]`link:#quarkus-core_quarkus.package.main-class[quarkus.package.main-class]`

[.description]
--
The entry point of the application. This can either be a a fully qualified name of a standard Java class with a main method, or `io.quarkus.runtime.QuarkusApplication`. 
 If your application has main classes annotated with `io.quarkus.runtime.annotations.QuarkusMain` then this can also reference the name given in the annotation, to avoid the need to specify fully qualified names in the config.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.user-configured-ignored-entries]]`link:#quarkus-core_quarkus.package.user-configured-ignored-entries[quarkus.package.user-configured-ignored-entries]`

[.description]
--
Files that should not be copied to the output artifact
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.included-optional-dependencies]]`link:#quarkus-core_quarkus.package.included-optional-dependencies[quarkus.package.included-optional-dependencies]`

[.description]
--
List of all the dependencies that have been defined as optional to include into the final package of the application. Each optional dependency needs to be expressed in the following format: 
 groupId:artifactId:classifier:type 
 With the classifier and type being optional. 
 If the type is missing, the artifact is assumed to be of type `jar`. 
 This parameter is optional, if absent, no optional dependencies will be included into the final package of the application. 
 For backward compatibility reasons, this parameter is ignored by default and can be enabled by setting the parameter `quarkus.package.filter-optional-dependencies` to `true`. 
 This parameter is meant to be used in modules where multi-builds have been configured to avoid getting a final package with unused dependencies.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.filter-optional-dependencies]]`link:#quarkus-core_quarkus.package.filter-optional-dependencies[quarkus.package.filter-optional-dependencies]`

[.description]
--
Flag indicating whether the optional dependencies should be filtered out or not. 
 This parameter is meant to be used in modules where multi-builds have been configured to avoid getting a final package with unused dependencies.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.runner-suffix]]`link:#quarkus-core_quarkus.package.runner-suffix[quarkus.package.runner-suffix]`

[.description]
--
The suffix that is applied to the runner jar and native images
--|string 
|`-runner`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.output-directory]]`link:#quarkus-core_quarkus.package.output-directory[quarkus.package.output-directory]`

[.description]
--
The output folder in which to place the output, this is resolved relative to the build systems target directory.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.output-name]]`link:#quarkus-core_quarkus.package.output-name[quarkus.package.output-name]`

[.description]
--
The name of the final artifact
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.create-appcds]]`link:#quarkus-core_quarkus.package.create-appcds[quarkus.package.create-appcds]`

[.description]
--
Whether to automate the creation of AppCDS. This has not effect when a native binary is needed and will be ignored in that case. Furthermore, this option only works for Java 11{plus} and is considered experimental for the time being. Finally, care must be taken to use the same exact JVM version when building and running the application.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.appcds-builder-image]]`link:#quarkus-core_quarkus.package.appcds-builder-image[quarkus.package.appcds-builder-image]`

[.description]
--
When AppCDS generation is enabled, if this property is set, then the JVM used to generate the AppCDS file will be the JVM present in the container image. The builder image is expected to have have the 'java' binary on its PATH. This flag is useful when the JVM to be used at runtime is not the same exact JVM version as the one used to build the jar. Note that this property is consulted only when `quarkus.package.create-appcds=true` and it requires having docker available during the build.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.user-providers-directory]]`link:#quarkus-core_quarkus.package.user-providers-directory[quarkus.package.user-providers-directory]`

[.description]
--
This is an advanced option that only takes effect for the mutable-jar format. 
 If this is specified a directory of this name will be created in the jar distribution. Users can place jar files in this directory, and when re-augmentation is performed these will be processed and added to the class-path. 
 Note that before reaugmentation has been performed these jars will be ignored, and if they are updated the app should be reaugmented again.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.include-dependency-list]]`link:#quarkus-core_quarkus.package.include-dependency-list[quarkus.package.include-dependency-list]`

[.description]
--
This option only applies when using fast-jar or mutable-jar. If this option is true then a list of all the coordinates of the artifacts that made up this image will be included in the quarkus-app directory. This list can be used by vulnerability scanners to determine if your application has any vulnerable dependencies.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.fernflower.enabled]]`link:#quarkus-core_quarkus.package.fernflower.enabled[quarkus.package.fernflower.enabled]`

[.description]
--
An advanced option that will decompile generated and transformed bytecode into the 'decompiled' directory. This is only taken into account when fast-jar is used.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.fernflower.hash]]`link:#quarkus-core_quarkus.package.fernflower.hash[quarkus.package.fernflower.hash]`

[.description]
--
The git hash to use to download the fernflower tool from https://jitpack.io/com/github/fesh0r/fernflower/
--|string 
|`dbf407a655`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.fernflower.jar-directory]]`link:#quarkus-core_quarkus.package.fernflower.jar-directory[quarkus.package.fernflower.jar-directory]`

[.description]
--
The directory into which to save the fernflower tool if it doesn't exist
--|string 
|`${user.home}/.quarkus`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.manifest.manifest-sections-manifest-sections]]`link:#quarkus-core_quarkus.package.manifest.manifest-sections-manifest-sections[quarkus.package.manifest.manifest-sections]`

[.description]
--
Custom manifest sections to be added to the MANIFEST.MF file. An example of the user defined property: quarkus.package.manifest.manifest-sections.++{++Section-Name++}++.++{++Entry-Key1++}++=++{++Value1++}++ quarkus.package.manifest.manifest-sections.++{++Section-Name++}++.++{++Entry-Key2++}++=++{++Value2++}++
--|`Map<String,Map<String,String>>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.platform.group-id]]`link:#quarkus-core_quarkus.platform.group-id[quarkus.platform.group-id]`

[.description]
--
groupId of the platform to use
--|string 
|`io.quarkus.platform`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.platform.artifact-id]]`link:#quarkus-core_quarkus.platform.artifact-id[quarkus.platform.artifact-id]`

[.description]
--
artifactId of the platform to use
--|string 
|`quarkus-bom`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.platform.version]]`link:#quarkus-core_quarkus.platform.version[quarkus.platform.version]`

[.description]
--
version of the platform to use
--|string 
|`999-SNAPSHOT`


a| [[quarkus-core_quarkus.shutdown.timeout]]`link:#quarkus-core_quarkus.shutdown.timeout[quarkus.shutdown.timeout]`

[.description]
--
The timeout to wait for running requests to finish. If this is not set then the application will exit immediately. Setting this timeout will incur a small performance penalty, as it requires active requests to be tracked.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.ssl.native]]`link:#quarkus-core_quarkus.ssl.native[quarkus.ssl.native]`

[.description]
--
Enable native SSL support.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.test.continuous-testing]]`link:#quarkus-core_quarkus.test.continuous-testing[quarkus.test.continuous-testing]`

[.description]
--
If continuous testing is enabled. The default value is 'paused', which will allow you to start testing from the console or the Dev UI, but will not run tests on startup. If this is set to 'enabled' then testing will start as soon as the application has started. If this is 'disabled' then continuous testing is not enabled, and can't be enabled without restarting the application.
--|`paused`, `enabled`, `disabled` 
|`paused`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.test.display-test-output]]`link:#quarkus-core_quarkus.test.display-test-output[quarkus.test.display-test-output]`

[.description]
--
If output from the running tests should be displayed in the console.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.test.include-tags]]`link:#quarkus-core_quarkus.test.include-tags[quarkus.test.include-tags]`

[.description]
--
Tags that should be included for continuous testing.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.test.exclude-tags]]`link:#quarkus-core_quarkus.test.exclude-tags[quarkus.test.exclude-tags]`

[.description]
--
Tags that should be excluded by default with continuous testing. This is ignored if include-tags has been set. Defaults to 'slow'
--|list of string 
|`slow`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.test.include-pattern]]`link:#quarkus-core_quarkus.test.include-pattern[quarkus.test.include-pattern]`

[.description]
--
Tests that should be included for continuous testing. This is a regular expression and is matched against the test class name (not the file name).
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.test.exclude-pattern]]`link:#quarkus-core_quarkus.test.exclude-pattern[quarkus.test.exclude-pattern]`

[.description]
--
Tests that should be excluded with continuous testing. This is a regular expression and is matched against the test class name (not the file name). This is ignored if include-pattern has been set.
--|string 
|`.*\.IT[^.]+\|.*IT\|.*ITCase`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.test.flat-class-path]]`link:#quarkus-core_quarkus.test.flat-class-path[quarkus.test.flat-class-path]`

[.description]
--
Changes tests to use the 'flat' ClassPath used in Quarkus 1.x versions. This means all Quarkus and test classes are loaded in the same ClassLoader, however it means you cannot use continuous testing. Note that if you find this necessary for your application then you may also have problems running in development mode, which cannot use a flat class path.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.test.native-image-profile]]`link:#quarkus-core_quarkus.test.native-image-profile[quarkus.test.native-image-profile]`

[.description]
--
The profile to use when testing the native image
--|string 
|`prod`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.test.profile]]`link:#quarkus-core_quarkus.test.profile[quarkus.test.profile]`

[.description]
--
The profile (dev, test or prod) to use when testing using @QuarkusTest
--|string 
|`test`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.test.profile.tags]]`link:#quarkus-core_quarkus.test.profile.tags[quarkus.test.profile.tags]`

[.description]
--
The tags this profile is associated with. When the `quarkus.test.profile.tags` System property is set (its value is a comma separated list of strings) then Quarkus will only execute tests that are annotated with a `@TestProfile` that has at least one of the supplied (via the aforementioned system property) tags.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.test.arg-line]]`link:#quarkus-core_quarkus.test.arg-line[quarkus.test.arg-line]`

[.description]
--
Additional launch parameters to be used when Quarkus launches the produced artifact for `@QuarkusIntegrationTest` When the artifact is a `jar`, this string is passed right after the `java` command. When the artifact is a `container`, this string is passed right after the `docker run` command. When the artifact is a `native binary`, this string is passed right after the native binary name.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.test.wait-time]]`link:#quarkus-core_quarkus.test.wait-time[quarkus.test.wait-time]`

[.description]
--
Used in `@QuarkusIntegrationTest` and `NativeImageTest` to determine how long the test will wait for the application to launch
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`PT1M`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.test.hang-detection-timeout]]`link:#quarkus-core_quarkus.test.hang-detection-timeout[quarkus.test.hang-detection-timeout]`

[.description]
--
Configures the hang detection in @QuarkusTest. If no activity happens (i.e. no test callbacks are called) over this period then QuarkusTest will dump all threads stack traces, to help diagnose a potential hang. Note that the initial timeout (before Quarkus has started) will only apply if provided by a system property, as it is not possible to read all config sources until Quarkus has booted.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`10M`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.test.type]]`link:#quarkus-core_quarkus.test.type[quarkus.test.type]`

[.description]
--
The type of test to run, this can be either: quarkus-test: Only runs `@QuarkusTest` annotated test classes unit: Only runs classes that are not annotated with `@QuarkusTest` all: Runs both, running the unit tests first
--|`unit`, `quarkus-test`, `all` 
|`all`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.test.class-clone-pattern]]`link:#quarkus-core_quarkus.test.class-clone-pattern[quarkus.test.class-clone-pattern]`

[.description]
--
If a class matches this pattern then it will be cloned into the Quarkus ClassLoader even if it is in a parent first artifact. This is important for collections which can contain objects from the Quarkus ClassLoader, but for most parent first classes it will just cause problems.
--|string 
|`java\..*`


a| [[quarkus-core_quarkus.thread-pool.core-threads]]`link:#quarkus-core_quarkus.thread-pool.core-threads[quarkus.thread-pool.core-threads]`

[.description]
--
The core thread pool size. This number of threads will always be kept alive.
--|int 
|`1`


a| [[quarkus-core_quarkus.thread-pool.prefill]]`link:#quarkus-core_quarkus.thread-pool.prefill[quarkus.thread-pool.prefill]`

[.description]
--
Prefill core thread pool. The core thread pool will be initialised with the core number of threads at startup
--|boolean 
|`true`


a| [[quarkus-core_quarkus.thread-pool.max-threads]]`link:#quarkus-core_quarkus.thread-pool.max-threads[quarkus.thread-pool.max-threads]`

[.description]
--
The maximum number of threads. If this is not specified then it will be automatically sized to the greater of 8 ++*++ the number of available processors and 200. For example if there are 4 processors the max threads will be 200. If there are 48 processors it will be 384.
--|int 
|


a| [[quarkus-core_quarkus.thread-pool.queue-size]]`link:#quarkus-core_quarkus.thread-pool.queue-size[quarkus.thread-pool.queue-size]`

[.description]
--
The queue size. For most applications this should be unbounded
--|int 
|


a| [[quarkus-core_quarkus.thread-pool.growth-resistance]]`link:#quarkus-core_quarkus.thread-pool.growth-resistance[quarkus.thread-pool.growth-resistance]`

[.description]
--
The executor growth resistance. A resistance factor applied after the core pool is full; values applied here will cause that fraction of submissions to create new threads when no idle thread is available. A value of `0.0f` implies that threads beyond the core size should be created as aggressively as threads within it; a value of `1.0f` implies that threads beyond the core size should never be created.
--|float 
|`0f`


a| [[quarkus-core_quarkus.thread-pool.shutdown-timeout]]`link:#quarkus-core_quarkus.thread-pool.shutdown-timeout[quarkus.thread-pool.shutdown-timeout]`

[.description]
--
The shutdown timeout. If all pending work has not been completed by this time then additional threads will be spawned to attempt to finish any pending tasks, and the shutdown process will continue
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`1M`


a| [[quarkus-core_quarkus.thread-pool.shutdown-interrupt]]`link:#quarkus-core_quarkus.thread-pool.shutdown-interrupt[quarkus.thread-pool.shutdown-interrupt]`

[.description]
--
The amount of time to wait for thread pool shutdown before tasks should be interrupted. If this value is greater than or equal to the value for `shutdown-timeout`, then tasks will not be interrupted before the shutdown timeout occurs.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-core_quarkus.thread-pool.shutdown-check-interval]]`link:#quarkus-core_quarkus.thread-pool.shutdown-check-interval[quarkus.thread-pool.shutdown-check-interval]`

[.description]
--
The frequency at which the status of the thread pool should be checked during shutdown. Information about waiting tasks and threads will be checked and possibly logged at this interval. Setting this key to an empty value disables the shutdown check interval.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`5`


a| [[quarkus-core_quarkus.thread-pool.keep-alive-time]]`link:#quarkus-core_quarkus.thread-pool.keep-alive-time[quarkus.thread-pool.keep-alive-time]`

[.description]
--
The amount of time a thread will stay alive with no work.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`30S`


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.tls.trust-all]]`link:#quarkus-core_quarkus.tls.trust-all[quarkus.tls.trust-all]`

[.description]
--
Enable trusting all certificates. Disable by default.
--|boolean 
|`false`


h|[[quarkus-core_quarkus.index-dependency.index-dependency-artifacts-on-the-classpath-that-should-also-be-indexed]]link:#quarkus-core_quarkus.index-dependency.index-dependency-artifacts-on-the-classpath-that-should-also-be-indexed[Artifacts on the classpath that should also be indexed]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.index-dependency.-dependency-name-.group-id]]`link:#quarkus-core_quarkus.index-dependency.-dependency-name-.group-id[quarkus.index-dependency."dependency-name".group-id]`

[.description]
--
The maven groupId of the artifact.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.index-dependency.-dependency-name-.artifact-id]]`link:#quarkus-core_quarkus.index-dependency.-dependency-name-.artifact-id[quarkus.index-dependency."dependency-name".artifact-id]`

[.description]
--
The maven artifactId of the artifact.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.index-dependency.-dependency-name-.classifier]]`link:#quarkus-core_quarkus.index-dependency.-dependency-name-.classifier[quarkus.index-dependency."dependency-name".classifier]`

[.description]
--
The maven classifier of the artifact.
--|string 
|


h|[[quarkus-core_quarkus.log.categories-minimum-logging-categories]]link:#quarkus-core_quarkus.log.categories-minimum-logging-categories[Minimum logging categories]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.log.category.-categories-.min-level]]`link:#quarkus-core_quarkus.log.category.-categories-.min-level[quarkus.log.category."categories".min-level]`

[.description]
--
The minimum log level for this category. By default all categories are configured with `DEBUG` minimum level. To get runtime logging below `DEBUG`, e.g. `TRACE`, the minimum level has to be adjusted at build time, the right log level needs to be provided at runtime. As an example, to get `TRACE` logging, minimum level needs to be at `TRACE` and the runtime log level needs to match that.
--|InheritableLevel 
|`inherit`


h|[[quarkus-core_quarkus.log.console-console-logging]]link:#quarkus-core_quarkus.log.console-console-logging[Console logging]

h|Type
h|Default

a| [[quarkus-core_quarkus.log.console.enable]]`link:#quarkus-core_quarkus.log.console.enable[quarkus.log.console.enable]`

[.description]
--
If console logging should be enabled
--|boolean 
|`true`


a| [[quarkus-core_quarkus.log.console.stderr]]`link:#quarkus-core_quarkus.log.console.stderr[quarkus.log.console.stderr]`

[.description]
--
If console logging should go to `System++#++err` instead of `System++#++out`.
--|boolean 
|`false`


a| [[quarkus-core_quarkus.log.console.format]]`link:#quarkus-core_quarkus.log.console.format[quarkus.log.console.format]`

[.description]
--
The log format. Note that this value will be ignored if an extension is present that takes control of console formatting (e.g. an XML or JSON-format extension).
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-core_quarkus.log.console.level]]`link:#quarkus-core_quarkus.log.console.level[quarkus.log.console.level]`

[.description]
--
The console log level.
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-core_quarkus.log.console.darken]]`link:#quarkus-core_quarkus.log.console.darken[quarkus.log.console.darken]`

[.description]
--
Specify how much the colors should be darkened. Note that this value will be ignored if an extension is present that takes control of console formatting (e.g. an XML or JSON-format extension).
--|int 
|`0`


a| [[quarkus-core_quarkus.log.console.async]]`link:#quarkus-core_quarkus.log.console.async[quarkus.log.console.async]`

[.description]
--
Indicates whether to log asynchronously
--|boolean 
|`false`


a| [[quarkus-core_quarkus.log.console.async.queue-length]]`link:#quarkus-core_quarkus.log.console.async.queue-length[quarkus.log.console.async.queue-length]`

[.description]
--
The queue length to use before flushing writing
--|int 
|`512`


a| [[quarkus-core_quarkus.log.console.async.overflow]]`link:#quarkus-core_quarkus.log.console.async.overflow[quarkus.log.console.async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full
--|`block`, `discard` 
|`block`


h|[[quarkus-core_quarkus.log.file-file-logging]]link:#quarkus-core_quarkus.log.file-file-logging[File logging]

h|Type
h|Default

a| [[quarkus-core_quarkus.log.file.enable]]`link:#quarkus-core_quarkus.log.file.enable[quarkus.log.file.enable]`

[.description]
--
If file logging should be enabled
--|boolean 
|`false`


a| [[quarkus-core_quarkus.log.file.format]]`link:#quarkus-core_quarkus.log.file.format[quarkus.log.file.format]`

[.description]
--
The log format
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %h %N[%i] %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-core_quarkus.log.file.level]]`link:#quarkus-core_quarkus.log.file.level[quarkus.log.file.level]`

[.description]
--
The level of logs to be written into the file.
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-core_quarkus.log.file.path]]`link:#quarkus-core_quarkus.log.file.path[quarkus.log.file.path]`

[.description]
--
The name of the file in which logs will be written.
--|link:https://docs.oracle.com/javase/8/docs/api/java/io/File.html[File]
 
|`quarkus.log`


a| [[quarkus-core_quarkus.log.file.async]]`link:#quarkus-core_quarkus.log.file.async[quarkus.log.file.async]`

[.description]
--
Indicates whether to log asynchronously
--|boolean 
|`false`


a| [[quarkus-core_quarkus.log.file.async.queue-length]]`link:#quarkus-core_quarkus.log.file.async.queue-length[quarkus.log.file.async.queue-length]`

[.description]
--
The queue length to use before flushing writing
--|int 
|`512`


a| [[quarkus-core_quarkus.log.file.async.overflow]]`link:#quarkus-core_quarkus.log.file.async.overflow[quarkus.log.file.async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full
--|`block`, `discard` 
|`block`


a| [[quarkus-core_quarkus.log.file.rotation.max-file-size]]`link:#quarkus-core_quarkus.log.file.rotation.max-file-size[quarkus.log.file.rotation.max-file-size]`

[.description]
--
The maximum file size of the log file after which a rotation is executed.
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`10`


a| [[quarkus-core_quarkus.log.file.rotation.max-backup-index]]`link:#quarkus-core_quarkus.log.file.rotation.max-backup-index[quarkus.log.file.rotation.max-backup-index]`

[.description]
--
The maximum number of backups to keep.
--|int 
|`1`


a| [[quarkus-core_quarkus.log.file.rotation.file-suffix]]`link:#quarkus-core_quarkus.log.file.rotation.file-suffix[quarkus.log.file.rotation.file-suffix]`

[.description]
--
File handler rotation file suffix. When used, the file will be rotated based on its suffix. Example fileSuffix: .yyyy-MM-dd
--|string 
|


a| [[quarkus-core_quarkus.log.file.rotation.rotate-on-boot]]`link:#quarkus-core_quarkus.log.file.rotation.rotate-on-boot[quarkus.log.file.rotation.rotate-on-boot]`

[.description]
--
Indicates whether to rotate log files on server initialization. 
 You need to either set a `max-file-size` or configure a `file-suffix` for it to work.
--|boolean 
|`true`


h|[[quarkus-core_quarkus.log.syslog-syslog-logging]]link:#quarkus-core_quarkus.log.syslog-syslog-logging[Syslog logging]

h|Type
h|Default

a| [[quarkus-core_quarkus.log.syslog.enable]]`link:#quarkus-core_quarkus.log.syslog.enable[quarkus.log.syslog.enable]`

[.description]
--
If syslog logging should be enabled
--|boolean 
|`false`


a| [[quarkus-core_quarkus.log.syslog.endpoint]]`link:#quarkus-core_quarkus.log.syslog.endpoint[quarkus.log.syslog.endpoint]`

[.description]
--
The IP address and port of the syslog server
--|host:port 
|`localhost:514`


a| [[quarkus-core_quarkus.log.syslog.app-name]]`link:#quarkus-core_quarkus.log.syslog.app-name[quarkus.log.syslog.app-name]`

[.description]
--
The app name used when formatting the message in RFC5424 format
--|string 
|


a| [[quarkus-core_quarkus.log.syslog.hostname]]`link:#quarkus-core_quarkus.log.syslog.hostname[quarkus.log.syslog.hostname]`

[.description]
--
The name of the host the messages are being sent from
--|string 
|


a| [[quarkus-core_quarkus.log.syslog.facility]]`link:#quarkus-core_quarkus.log.syslog.facility[quarkus.log.syslog.facility]`

[.description]
--
Sets the facility used when calculating the priority of the message as defined by RFC-5424 and RFC-3164
--|`kernel`, `user-level`, `mail-system`, `system-daemons`, `security`, `syslogd`, `line-printer`, `network-news`, `uucp`, `clock-daemon`, `security2`, `ftp-daemon`, `ntp`, `log-audit`, `log-alert`, `clock-daemon2`, `local-use-0`, `local-use-1`, `local-use-2`, `local-use-3`, `local-use-4`, `local-use-5`, `local-use-6`, `local-use-7` 
|`user-level`


a| [[quarkus-core_quarkus.log.syslog.syslog-type]]`link:#quarkus-core_quarkus.log.syslog.syslog-type[quarkus.log.syslog.syslog-type]`

[.description]
--
Set the `SyslogType syslog type` this handler should use to format the message sent
--|`rfc5424`, `rfc3164` 
|`rfc5424`


a| [[quarkus-core_quarkus.log.syslog.protocol]]`link:#quarkus-core_quarkus.log.syslog.protocol[quarkus.log.syslog.protocol]`

[.description]
--
Sets the protocol used to connect to the syslog server
--|`tcp`, `udp`, `ssl-tcp` 
|`tcp`


a| [[quarkus-core_quarkus.log.syslog.use-counting-framing]]`link:#quarkus-core_quarkus.log.syslog.use-counting-framing[quarkus.log.syslog.use-counting-framing]`

[.description]
--
Set to `true` if the message being sent should be prefixed with the size of the message
--|boolean 
|`false`


a| [[quarkus-core_quarkus.log.syslog.truncate]]`link:#quarkus-core_quarkus.log.syslog.truncate[quarkus.log.syslog.truncate]`

[.description]
--
Set to `true` if the message should be truncated
--|boolean 
|`true`


a| [[quarkus-core_quarkus.log.syslog.block-on-reconnect]]`link:#quarkus-core_quarkus.log.syslog.block-on-reconnect[quarkus.log.syslog.block-on-reconnect]`

[.description]
--
Enables or disables blocking when attempting to reconnect a `org.jboss.logmanager.handlers.SyslogHandler.Protocol++#++TCP
TCP` or `org.jboss.logmanager.handlers.SyslogHandler.Protocol++#++SSL_TCP SSL TCP` protocol
--|boolean 
|`false`


a| [[quarkus-core_quarkus.log.syslog.format]]`link:#quarkus-core_quarkus.log.syslog.format[quarkus.log.syslog.format]`

[.description]
--
The log message format
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-core_quarkus.log.syslog.level]]`link:#quarkus-core_quarkus.log.syslog.level[quarkus.log.syslog.level]`

[.description]
--
The log level specifying, which message levels will be logged by syslog logger
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-core_quarkus.log.syslog.async]]`link:#quarkus-core_quarkus.log.syslog.async[quarkus.log.syslog.async]`

[.description]
--
Indicates whether to log asynchronously
--|boolean 
|`false`


a| [[quarkus-core_quarkus.log.syslog.async.queue-length]]`link:#quarkus-core_quarkus.log.syslog.async.queue-length[quarkus.log.syslog.async.queue-length]`

[.description]
--
The queue length to use before flushing writing
--|int 
|`512`


a| [[quarkus-core_quarkus.log.syslog.async.overflow]]`link:#quarkus-core_quarkus.log.syslog.async.overflow[quarkus.log.syslog.async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full
--|`block`, `discard` 
|`block`


h|[[quarkus-core_quarkus.log.categories-logging-categories]]link:#quarkus-core_quarkus.log.categories-logging-categories[Logging categories]

h|Type
h|Default

a| [[quarkus-core_quarkus.log.category.-categories-.level]]`link:#quarkus-core_quarkus.log.category.-categories-.level[quarkus.log.category."categories".level]`

[.description]
--
The log level for this category. Note that to get log levels below `INFO`, the minimum level build time configuration option needs to be adjusted as well.
--|InheritableLevel 
|`inherit`


a| [[quarkus-core_quarkus.log.category.-categories-.handlers]]`link:#quarkus-core_quarkus.log.category.-categories-.handlers[quarkus.log.category."categories".handlers]`

[.description]
--
The names of the handlers to link to this category.
--|list of string 
|


a| [[quarkus-core_quarkus.log.category.-categories-.use-parent-handlers]]`link:#quarkus-core_quarkus.log.category.-categories-.use-parent-handlers[quarkus.log.category."categories".use-parent-handlers]`

[.description]
--
Specify whether or not this logger should send its output to its parent Logger
--|boolean 
|`true`


h|[[quarkus-core_quarkus.log.console-handlers-console-handlers]]link:#quarkus-core_quarkus.log.console-handlers-console-handlers[Console handlers]

h|Type
h|Default

a| [[quarkus-core_quarkus.log.handler.console.-console-handlers-.enable]]`link:#quarkus-core_quarkus.log.handler.console.-console-handlers-.enable[quarkus.log.handler.console."console-handlers".enable]`

[.description]
--
If console logging should be enabled
--|boolean 
|`true`


a| [[quarkus-core_quarkus.log.handler.console.-console-handlers-.stderr]]`link:#quarkus-core_quarkus.log.handler.console.-console-handlers-.stderr[quarkus.log.handler.console."console-handlers".stderr]`

[.description]
--
If console logging should go to `System++#++err` instead of `System++#++out`.
--|boolean 
|`false`


a| [[quarkus-core_quarkus.log.handler.console.-console-handlers-.format]]`link:#quarkus-core_quarkus.log.handler.console.-console-handlers-.format[quarkus.log.handler.console."console-handlers".format]`

[.description]
--
The log format. Note that this value will be ignored if an extension is present that takes control of console formatting (e.g. an XML or JSON-format extension).
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-core_quarkus.log.handler.console.-console-handlers-.level]]`link:#quarkus-core_quarkus.log.handler.console.-console-handlers-.level[quarkus.log.handler.console."console-handlers".level]`

[.description]
--
The console log level.
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-core_quarkus.log.handler.console.-console-handlers-.darken]]`link:#quarkus-core_quarkus.log.handler.console.-console-handlers-.darken[quarkus.log.handler.console."console-handlers".darken]`

[.description]
--
Specify how much the colors should be darkened. Note that this value will be ignored if an extension is present that takes control of console formatting (e.g. an XML or JSON-format extension).
--|int 
|`0`


a| [[quarkus-core_quarkus.log.handler.console.-console-handlers-.async]]`link:#quarkus-core_quarkus.log.handler.console.-console-handlers-.async[quarkus.log.handler.console."console-handlers".async]`

[.description]
--
Indicates whether to log asynchronously
--|boolean 
|`false`


a| [[quarkus-core_quarkus.log.handler.console.-console-handlers-.async.queue-length]]`link:#quarkus-core_quarkus.log.handler.console.-console-handlers-.async.queue-length[quarkus.log.handler.console."console-handlers".async.queue-length]`

[.description]
--
The queue length to use before flushing writing
--|int 
|`512`


a| [[quarkus-core_quarkus.log.handler.console.-console-handlers-.async.overflow]]`link:#quarkus-core_quarkus.log.handler.console.-console-handlers-.async.overflow[quarkus.log.handler.console."console-handlers".async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full
--|`block`, `discard` 
|`block`


h|[[quarkus-core_quarkus.log.file-handlers-file-handlers]]link:#quarkus-core_quarkus.log.file-handlers-file-handlers[File handlers]

h|Type
h|Default

a| [[quarkus-core_quarkus.log.handler.file.-file-handlers-.enable]]`link:#quarkus-core_quarkus.log.handler.file.-file-handlers-.enable[quarkus.log.handler.file."file-handlers".enable]`

[.description]
--
If file logging should be enabled
--|boolean 
|`false`


a| [[quarkus-core_quarkus.log.handler.file.-file-handlers-.format]]`link:#quarkus-core_quarkus.log.handler.file.-file-handlers-.format[quarkus.log.handler.file."file-handlers".format]`

[.description]
--
The log format
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %h %N[%i] %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-core_quarkus.log.handler.file.-file-handlers-.level]]`link:#quarkus-core_quarkus.log.handler.file.-file-handlers-.level[quarkus.log.handler.file."file-handlers".level]`

[.description]
--
The level of logs to be written into the file.
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-core_quarkus.log.handler.file.-file-handlers-.path]]`link:#quarkus-core_quarkus.log.handler.file.-file-handlers-.path[quarkus.log.handler.file."file-handlers".path]`

[.description]
--
The name of the file in which logs will be written.
--|link:https://docs.oracle.com/javase/8/docs/api/java/io/File.html[File]
 
|`quarkus.log`


a| [[quarkus-core_quarkus.log.handler.file.-file-handlers-.async]]`link:#quarkus-core_quarkus.log.handler.file.-file-handlers-.async[quarkus.log.handler.file."file-handlers".async]`

[.description]
--
Indicates whether to log asynchronously
--|boolean 
|`false`


a| [[quarkus-core_quarkus.log.handler.file.-file-handlers-.async.queue-length]]`link:#quarkus-core_quarkus.log.handler.file.-file-handlers-.async.queue-length[quarkus.log.handler.file."file-handlers".async.queue-length]`

[.description]
--
The queue length to use before flushing writing
--|int 
|`512`


a| [[quarkus-core_quarkus.log.handler.file.-file-handlers-.async.overflow]]`link:#quarkus-core_quarkus.log.handler.file.-file-handlers-.async.overflow[quarkus.log.handler.file."file-handlers".async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full
--|`block`, `discard` 
|`block`


a| [[quarkus-core_quarkus.log.handler.file.-file-handlers-.rotation.max-file-size]]`link:#quarkus-core_quarkus.log.handler.file.-file-handlers-.rotation.max-file-size[quarkus.log.handler.file."file-handlers".rotation.max-file-size]`

[.description]
--
The maximum file size of the log file after which a rotation is executed.
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`10`


a| [[quarkus-core_quarkus.log.handler.file.-file-handlers-.rotation.max-backup-index]]`link:#quarkus-core_quarkus.log.handler.file.-file-handlers-.rotation.max-backup-index[quarkus.log.handler.file."file-handlers".rotation.max-backup-index]`

[.description]
--
The maximum number of backups to keep.
--|int 
|`1`


a| [[quarkus-core_quarkus.log.handler.file.-file-handlers-.rotation.file-suffix]]`link:#quarkus-core_quarkus.log.handler.file.-file-handlers-.rotation.file-suffix[quarkus.log.handler.file."file-handlers".rotation.file-suffix]`

[.description]
--
File handler rotation file suffix. When used, the file will be rotated based on its suffix. Example fileSuffix: .yyyy-MM-dd
--|string 
|


a| [[quarkus-core_quarkus.log.handler.file.-file-handlers-.rotation.rotate-on-boot]]`link:#quarkus-core_quarkus.log.handler.file.-file-handlers-.rotation.rotate-on-boot[quarkus.log.handler.file."file-handlers".rotation.rotate-on-boot]`

[.description]
--
Indicates whether to rotate log files on server initialization. 
 You need to either set a `max-file-size` or configure a `file-suffix` for it to work.
--|boolean 
|`true`


h|[[quarkus-core_quarkus.log.syslog-handlers-syslog-handlers]]link:#quarkus-core_quarkus.log.syslog-handlers-syslog-handlers[Syslog handlers]

h|Type
h|Default

a| [[quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.enable]]`link:#quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.enable[quarkus.log.handler.syslog."syslog-handlers".enable]`

[.description]
--
If syslog logging should be enabled
--|boolean 
|`false`


a| [[quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.endpoint]]`link:#quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.endpoint[quarkus.log.handler.syslog."syslog-handlers".endpoint]`

[.description]
--
The IP address and port of the syslog server
--|host:port 
|`localhost:514`


a| [[quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.app-name]]`link:#quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.app-name[quarkus.log.handler.syslog."syslog-handlers".app-name]`

[.description]
--
The app name used when formatting the message in RFC5424 format
--|string 
|


a| [[quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.hostname]]`link:#quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.hostname[quarkus.log.handler.syslog."syslog-handlers".hostname]`

[.description]
--
The name of the host the messages are being sent from
--|string 
|


a| [[quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.facility]]`link:#quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.facility[quarkus.log.handler.syslog."syslog-handlers".facility]`

[.description]
--
Sets the facility used when calculating the priority of the message as defined by RFC-5424 and RFC-3164
--|`kernel`, `user-level`, `mail-system`, `system-daemons`, `security`, `syslogd`, `line-printer`, `network-news`, `uucp`, `clock-daemon`, `security2`, `ftp-daemon`, `ntp`, `log-audit`, `log-alert`, `clock-daemon2`, `local-use-0`, `local-use-1`, `local-use-2`, `local-use-3`, `local-use-4`, `local-use-5`, `local-use-6`, `local-use-7` 
|`user-level`


a| [[quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.syslog-type]]`link:#quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.syslog-type[quarkus.log.handler.syslog."syslog-handlers".syslog-type]`

[.description]
--
Set the `SyslogType syslog type` this handler should use to format the message sent
--|`rfc5424`, `rfc3164` 
|`rfc5424`


a| [[quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.protocol]]`link:#quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.protocol[quarkus.log.handler.syslog."syslog-handlers".protocol]`

[.description]
--
Sets the protocol used to connect to the syslog server
--|`tcp`, `udp`, `ssl-tcp` 
|`tcp`


a| [[quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.use-counting-framing]]`link:#quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.use-counting-framing[quarkus.log.handler.syslog."syslog-handlers".use-counting-framing]`

[.description]
--
Set to `true` if the message being sent should be prefixed with the size of the message
--|boolean 
|`false`


a| [[quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.truncate]]`link:#quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.truncate[quarkus.log.handler.syslog."syslog-handlers".truncate]`

[.description]
--
Set to `true` if the message should be truncated
--|boolean 
|`true`


a| [[quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.block-on-reconnect]]`link:#quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.block-on-reconnect[quarkus.log.handler.syslog."syslog-handlers".block-on-reconnect]`

[.description]
--
Enables or disables blocking when attempting to reconnect a `org.jboss.logmanager.handlers.SyslogHandler.Protocol++#++TCP
TCP` or `org.jboss.logmanager.handlers.SyslogHandler.Protocol++#++SSL_TCP SSL TCP` protocol
--|boolean 
|`false`


a| [[quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.format]]`link:#quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.format[quarkus.log.handler.syslog."syslog-handlers".format]`

[.description]
--
The log message format
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.level]]`link:#quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.level[quarkus.log.handler.syslog."syslog-handlers".level]`

[.description]
--
The log level specifying, which message levels will be logged by syslog logger
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.async]]`link:#quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.async[quarkus.log.handler.syslog."syslog-handlers".async]`

[.description]
--
Indicates whether to log asynchronously
--|boolean 
|`false`


a| [[quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.async.queue-length]]`link:#quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.async.queue-length[quarkus.log.handler.syslog."syslog-handlers".async.queue-length]`

[.description]
--
The queue length to use before flushing writing
--|int 
|`512`


a| [[quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.async.overflow]]`link:#quarkus-core_quarkus.log.handler.syslog.-syslog-handlers-.async.overflow[quarkus.log.handler.syslog."syslog-handlers".async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full
--|`block`, `discard` 
|`block`


h|[[quarkus-core_quarkus.log.filters-log-cleanup-filters-internal-use]]link:#quarkus-core_quarkus.log.filters-log-cleanup-filters-internal-use[Log cleanup filters - internal use]

h|Type
h|Default

a| [[quarkus-core_quarkus.log.filter.-filters-.if-starts-with]]`link:#quarkus-core_quarkus.log.filter.-filters-.if-starts-with[quarkus.log.filter."filters".if-starts-with]`

[.description]
--
The message starts to match
--|list of string 
|`inherit`


a| [[quarkus-core_quarkus.log.filter.-filters-.target-level]]`link:#quarkus-core_quarkus.log.filter.-filters-.target-level[quarkus.log.filter."filters".target-level]`

[.description]
--
The new log level for the filtered message, defaults to DEBUG
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`DEBUG`

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]

[NOTE]
[[memory-size-note-anchor]]
.About the MemorySize format
====
A size configuration option recognises string in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.
If no suffix is given, assume bytes.
====
